apps/archive/audiobookrequest/audiobookrequest-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookrequest-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://audiobookrequest.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "AudioBookRequest"
    gethomepage.dev/description: "Audiobook request frontend for Audiobookshelf/*arr workflows"
    gethomepage.dev/app: audiobookrequest
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "mdi-book-headphones"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`audiobookrequest.lab.mainertoo.com`)
      kind: Rule
      # middlewares:
      #   - name: authentik-sso
      #     namespace: traefik-system
      services:
        - name: audiobookrequest
          port: 8000
  tls: {}
